or_api/01_or_api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orapi
  namespace: sandbox
  labels:
    app: orapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orapi
  template:
    metadata:
      labels:
        app: orapi
    spec:
      containers:
        - name: orapi
          image: harbor.ork.orhro.com/orapi/or_api
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
