or_api/02_or_api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: orapi-svc
  namespace: sandbox
  labels:
    app: orapi
spec:
  selector:
    app: orapi
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
