or_api/03_or_api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orapi-ingress
  namespace: sandbox
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure    
spec:
  rules:
  - host: orapi.ork.orhro.com
    http:
      paths:
      - backend:
          service:
            name: orapi-svc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - {}
